--- a/public/style.css
+++ b/public/style.css
@@ -360,3 +360,21 @@
       width: 100%;
       height: 100%;
     }
+
+    .nav-top{
+      display: flex;
+      align-items: center;
+      margin-bottom: 10px;
+      width: 100%;
+      height: 40px;
+      justify-content: space-between;
+    }
+
+
+    .user-details{
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      height: 100%;
+      font-weight: 600;
+    }
